force-app/main/default/objects/Boletin__c/Boletin__c.object-meta.xml
<CustomObject>
    <label>Informe</label>
    <nameField>
        <displayFormat>Boletín-{0000}</displayFormat>
        <label>Boletín número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>