force-app/main/default/objects/Boletin__c/fields/AAAPE__c.field-meta.xml
<CustomField>
    <fullName>AAAPE__c</fullName>
    <label>Aprender a aprender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>