force-app/main/default/objects/Boletin__c/fields/Alumno__c.field-meta.xml
<CustomField>
    <fullName>Alumno__c</fullName>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El contacto seleccionado debe ser un Becario</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>NPSP_Becarios</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Boletines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>