force-app/main/default/objects/Boletin__c/fields/Anio_calendario__c.field-meta.xml
<CustomField>
    <fullName>Anio_calendario__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <label>Año calendario</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>