force-app/main/default/objects/Boletin__c/fields/AyCSE__c.field-meta.xml
<CustomField>
    <fullName>AyCSE__c</fullName>
    <label>Análisis y comprensión de la información</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>