force-app/main/default/objects/Boletin__c/fields/Cantidad_Final__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Final__c</fullName>
    <description>Cantidad de materias del trimestre final</description>
    <label>Cantidad Final</label>
    <summaryFilterItems>
        <field>Calificacion__c.Final__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Calificacion__c.Boletin__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>