force-app/main/default/objects/Boletin__c/fields/Cantidad_Primer__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Primer__c</fullName>
    <description>Cantidad de materias en el primer trimestre</description>
    <label>Cantidad Primer</label>
    <summaryFilterItems>
        <field>Calificacion__c.Primer_trimestre__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Calificacion__c.Boletin__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>