force-app/main/default/objects/Boletin__c/fields/Cantidad_Segundo__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Segundo__c</fullName>
    <description>Cantidad de materias del segundo trmistre</description>
    <label>Cantidad Segundo</label>
    <summaryFilterItems>
        <field>Calificacion__c.Segundo_trimestre__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Calificacion__c.Boletin__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>