force-app/main/default/objects/Boletin__c/fields/Cantidad_Tercer__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Tercer__c</fullName>
    <description>Cantidad de materias del tercer trimestre</description>
    <label>Cantidad Tercer</label>
    <summaryFilterItems>
        <field>Calificacion__c.Tercer_trimestre__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Calificacion__c.Boletin__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>