force-app/main/default/objects/Boletin__c/fields/CASE__c.field-meta.xml
<CustomField>
    <fullName>CASE__c</fullName>
    <label>Ciudadanía responsable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>