force-app/main/default/objects/Boletin__c/fields/CPE__c.field-meta.xml
<CustomField>
    <fullName>CPE__c</fullName>
    <label>Comunicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>