force-app/main/default/objects/Boletin__c/fields/CPEForm__c.field-meta.xml
<CustomField>
    <fullName>CPEForm__c</fullName>
    <formula>CASE( CPE__c , &apos;Excelente&apos;, &apos;Destacada capacidad para comunicarse de manera efectiva, expresar y comprender mensajes en diferentes contextos y según distintos propósitos. Utiliza variedad de soportes, un lenguaje verbal y no verbal apropiado.&apos;, &apos;Muy bueno&apos;, &apos;Muy buena capacidad para comunicarse y expresarse en forma clara y adecuada, y comprender mensajes en la mayoría de las situaciones comunicativas.&apos;, &apos;Bueno&apos;, &apos;Buena capacidad para comunicarse y expresarse en forma clara y adecuada y comprender mensajes en algunas situaciones comunicativas.&apos;, &apos;Regular&apos;, &apos;No siempre se expresa en forma efectiva y tiene algunas dificultades para comprender mensajes recibidos. En ocasiones no logra comunicar abiertamente su posición o se comunica con un lenguaje inapropiado.&apos;, &apos;Mejorable&apos;, &apos;Generalmente tiene dificultades para hacerse entender y expresarse, así como para comprender el mensaje transmitido.&apos;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción</label>
    <type>Text</type>
</CustomField>