force-app/main/default/objects/Boletin__c/fields/Cuatrimestral__c.field-meta.xml
<CustomField>
    <fullName>Cuatrimestral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es cuatrimestral</label>
    <type>Checkbox</type>
</CustomField>