force-app/main/default/objects/Boletin__c/fields/Esfuerzo__c.field-meta.xml
<CustomField>
    <fullName>Esfuerzo__c</fullName>
    <label>Esfuerzo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excelente</fullName>
            </value>
            <value>
                <fullName>Muy Bueno</fullName>
            </value>
            <value>
                <fullName>Bueno</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Insuficiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>