force-app/main/default/objects/Boletin__c/fields/Eval1_completa__c.field-meta.xml
<CustomField>
    <fullName>Eval1_completa__c</fullName>
    <formula>NOT(OR(Text(AAAPE__c)=&quot;&quot;,Text(AAAPE__c)=&quot;No evaluado&quot;,
Text(CPE__c)=&quot;&quot;,Text(CPE__c)=&quot;No evaluado&quot;,
Text(AyCPE__c)=&quot;&quot;,Text(AyCPE__c)=&quot;No evaluado&quot;,
Text(PCPE__c)=&quot;&quot;,Text(PCPE__c)=&quot;No evaluado&quot;,
Text(OyPPE__c)=&quot;&quot;,Text(OyPPE__c)=&quot;No evaluado&quot;,
Text(TcOPE__c)=&quot;&quot;,Text(TcOPE__c)=&quot;No evaluado&quot;,
Text(CAPE__c)=&quot;&quot;,Text(CAPE__c)=&quot;No evaluado&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidades P. Evaluación Completa?</label>
    <type>Checkbox</type>
</CustomField>