force-app/main/default/objects/Boletin__c/fields/Final_Promedio__c.field-meta.xml
<CustomField>
    <fullName>Final_Promedio__c</fullName>
    <description>Promedio de las calificaciones del trimestre final</description>
    <formula>Suma_Final__c  /  Cantidad_Final__c</formula>
    <label>Promedio Final</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>