force-app/main/default/objects/Boletin__c/fields/Materias_Previas__c.field-meta.xml
<CustomField>
    <fullName>Materias_Previas__c</fullName>
    <label>Materias Previas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>