force-app/main/default/objects/Boletin__c/fields/Observaciones_de_Inasistencia_a_Clase__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_de_Inasistencia_a_Clase__c</fullName>
    <label>Observaciones de Inasistencia a Clase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>