force-app/main/default/objects/Boletin__c/fields/Observaciones_Esfuerzo__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Esfuerzo__c</fullName>
    <label>Observaciones Esfuerzo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>