force-app/main/default/objects/Boletin__c/fields/Observaciones_Generales__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Generales__c</fullName>
    <label>Observaciones Generales</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>