force-app/main/default/objects/Boletin__c/fields/OyPPE__c.field-meta.xml
<CustomField>
    <fullName>OyPPE__c</fullName>
    <label>Organización y planificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>