force-app/main/default/objects/Boletin__c/fields/OYPSE__c.field-meta.xml
<CustomField>
    <fullName>OYPSE__c</fullName>
    <label>Organización y planificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>