force-app/main/default/objects/Boletin__c/fields/PCPE__c.field-meta.xml
<CustomField>
    <fullName>PCPE__c</fullName>
    <label>Pensamiento crítico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>