force-app/main/default/objects/Boletin__c/fields/Primer_Promedio__c.field-meta.xml
<CustomField>
    <fullName>Primer_Promedio__c</fullName>
    <description>Promedio de las calificaciones del primer trimestre</description>
    <formula>Suma_Primer__c  /  Cantidad_Primer__c</formula>
    <label>Promedio Primer Trimestre</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>