force-app/main/default/objects/Boletin__c/fields/Segundo_Promedio__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Promedio__c</fullName>
    <description>promedio de las calificaciones de las materias del segundo trimestre</description>
    <formula>Suma_Segundo__c  /  Cantidad_Segundo__c</formula>
    <label>Promedio Segundo Trimestre</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>