force-app/main/default/objects/Boletin__c/fields/Suma_Final__c.field-meta.xml
<CustomField>
    <fullName>Suma_Final__c</fullName>
    <description>Suma de las calificaciones de las materias del trimestre final</description>
    <label>Suma Final</label>
    <summarizedField>Calificacion__c.Final__c</summarizedField>
    <summaryFilterItems>
        <field>Calificacion__c.Final__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Calificacion__c.Boletin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>