force-app/main/default/objects/Boletin__c/fields/Suma_Segundo__c.field-meta.xml
<CustomField>
    <fullName>Suma_Segundo__c</fullName>
    <description>Suma de las calificaciones del segundo trimestre</description>
    <label>Suma Segundo</label>
    <summarizedField>Calificacion__c.Segundo_trimestre__c</summarizedField>
    <summaryFilterItems>
        <field>Calificacion__c.Segundo_trimestre__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Calificacion__c.Boletin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>