force-app/main/default/objects/Boletin__c/fields/Suma_Tercer__c.field-meta.xml
<CustomField>
    <fullName>Suma_Tercer__c</fullName>
    <description>Suma de las calificaciones de las materias del tercer trimestre</description>
    <label>Suma Tercer</label>
    <summarizedField>Calificacion__c.Tercer_trimestre__c</summarizedField>
    <summaryFilterItems>
        <field>Calificacion__c.Tercer_trimestre__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Calificacion__c.Boletin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>