force-app/main/default/objects/Boletin__c/fields/TcOSE__c.field-meta.xml
<CustomField>
    <fullName>TcOSE__c</fullName>
    <label>Trabajo con otros</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Calificaciones</valueSetName>
    </valueSet>
</CustomField>