force-app/main/default/objects/Boletin__c/fields/Tercer_Promedio__c.field-meta.xml
<CustomField>
    <fullName>Tercer_Promedio__c</fullName>
    <description>Promedio de las calificaciones de las materias del tercer trimestre</description>
    <formula>Suma_Tercer__c  /  Cantidad_Tercer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio Tercer Trimestre</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>